# globacl

./: .dockerignore  .gitignore  .mise.toml  .yamllint  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/yamllint/: action.yml
.github/workflows/: ci.yml  k3s-e2e.yml  k3s-smoke.yml  release.yml  tag-release.yml
clients/go/: README.md  go.mod  oapi-codegen.yaml
clients/go/cmd/globacl-e2e/: main.go  main_test.go
clients/go/cmd/globacl-smoke/: main.go
clients/go/globacl/: client.gen.go  client.go  client_test.go
clients/typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/typescript/src/: client.ts  index.ts
clients/typescript/src/global-ui/: index.html  main.ts  server.mjs  styles.css
clients/typescript/tests/: client.test.mjs  global-ui-server.test.mjs
crates/globacl-agent/: Cargo.toml
crates/globacl-agent/src/: app.rs  lib.rs  main.rs
crates/globacl-agent/src/app/: bootstrap.rs  poll.rs  routes.rs  snapshot.rs  state.rs  tests.rs
crates/globacl-bench/: Cargo.toml
crates/globacl-bench/src/: app.rs  main.rs
crates/globacl-bench/src/app/: cli.rs  data.rs  run.rs  stats.rs
crates/globacl-commitd/: Cargo.toml
crates/globacl-commitd/src/: app.rs  main.rs
crates/globacl-commitd/src/app/: bootstrap.rs  commit.rs  config.rs  consensus.rs  object_store.rs  propagation.rs  routes.rs  storage.rs  tests.rs
crates/globacl-commitd/tests/: multi_process_partition.rs
crates/globacl-contract-tests/: Cargo.toml
crates/globacl-contract-tests/tests/: openapi_contract.rs
crates/globacl-control/: Cargo.toml
crates/globacl-control/src/: app.rs  main.rs
crates/globacl-control/src/app/: bootstrap.rs  proxy.rs  routes.rs  tests.rs
crates/globacl-core/: Cargo.toml
crates/globacl-core/src/: lib.rs
crates/globacl-core/src/lib/: active_state.rs  auth.rs  codec.rs  domain.rs  http.rs  metrics.rs  nats.rs  rules.rs  signatures.rs  snapshots.rs  source.rs  tests.rs
crates/globacl-demo-app/: Cargo.toml
crates/globacl-demo-app/src/: app.rs  main.rs
crates/globacl-demo-app/src/app/: bootstrap.rs  proxy.rs  routes.rs
crates/globacl-relay/: Cargo.toml
crates/globacl-relay/src/: app.rs  main.rs
deploy/grafana/: globacl-overview.json
deploy/k3s/: dev-cluster.sh  global-e2e.sh  global-smoke.sh  global-ui.sh  jetstream-e2e.sh  jetstream-smoke.sh  local-e2e.sh  local-smoke.sh  object-storage-e2e.sh  observability-e2e.sh  observability-smoke.sh  scale-e2e.sh
deploy/k8s/: grafana.yaml  local-observability.yaml  local.yaml  nats-jetstream.yaml  seaweedfs-s3.yaml
deploy/k8s/global/: central.yaml  region.yaml.tpl
docs/: api.md  client-generation.md  deployment.md  getting-started.md  openapi.yaml  testing.md
scripts/: check-generated-clients.sh  check-k8s-images-pinned.sh  generate-clients.sh
(+5 files in other folders)
