[workspace]
members = [
    "crates/globacl-agent",
    "crates/globacl-bench",
    "crates/globacl-commitd",
    "crates/globacl-control",
    "crates/globacl-core",
    "crates/globacl-demo-app",
    "crates/globacl-relay",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/thevilledev/globacl"
