[package]
name = "globacl-commitd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
globacl-core = { path = "../globacl-core" }
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls"] }
sha2 = "=0.11.0"

[[bin]]
name = "globacl-commitd"
path = "src/main.rs"
