[package]
name = "globacl-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arc-swap = "=1.9.1"
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["fast", "zeroize"] }
sha2 = "=0.10.9"
